manifests/infra/kuma/ValidatingWebhookConfiguration-kuma-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: kuma-control-plane
    app.kubernetes.io/instance: kuma
    app.kubernetes.io/name: kuma
  name: kuma-validating-webhook-configuration
  namespace: kuma-system
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lRSDRtdnlDc0ptNmNTWDlGMEQzK2hoREFOQmdrcWhraUc5dzBCQVFzRkFEQVMKTVJBd0RnWURWUVFERXdkcmRXMWhMV05oTUI0WERUSTFNRFl4T0RBeU5UWXlNVm9YRFRNMU1EWXhOakF5TlRZeQpNVm93RWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU5PeldaR2ZsZFFUMFFEZks5WnpabktpM0hMNlVrVlBIaU45cEJmYnlkbGltOHo5SXBCR1NkaTgKZWdlRGpnWFVTRmlGK3owWGJYQ2E0aDBWZEdUNDBwYUthWWlvZFI1Mk9IN2dMcjl1L2k2NGlKZHc2VDkwSUhiOQpmNHpNTWRRdmtO [...]
      service:
        name: kuma-control-plane
        namespace: kuma-system
        path: /validate-kuma-io-v1alpha1
    failurePolicy: Fail
    name: validator.kuma-admission.kuma.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
    rules:
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - circuitbreakers
          - dataplanes
          - externalservices
          - faultinjections
          - meshgatewayinstances
          - healthchecks
          - meshes
          - meshgateways
          - meshgatewayroutes
          - proxytemplates
          - ratelimits
          - retries
          - trafficlogs
          - trafficpermissions
          - trafficroutes
          - traffictraces
          - virtualoutbounds
          - zones
          - containerpatches
          - meshaccesslogs
          - meshcircuitbreakers
          - meshfaultinjections
          - meshhealthchecks
          - meshhttproutes
          - meshloadbalancingstrategies
          - meshmetrics
          - meshpassthroughs
          - meshproxypatches
          - meshratelimits
          - meshretries
          - meshtcproutes
          - meshtimeouts
          - meshtlses
          - meshtraces
          - meshtrafficpermissions
          - hostnamegenerators
          - meshexternalservices
          - meshmultizoneservices
          - meshservices
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lRSDRtdnlDc0ptNmNTWDlGMEQzK2hoREFOQmdrcWhraUc5dzBCQVFzRkFEQVMKTVJBd0RnWURWUVFERXdkcmRXMWhMV05oTUI0WERUSTFNRFl4T0RBeU5UWXlNVm9YRFRNMU1EWXhOakF5TlRZeQpNVm93RWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU5PeldaR2ZsZFFUMFFEZks5WnpabktpM0hMNlVrVlBIaU45cEJmYnlkbGltOHo5SXBCR1NkaTgKZWdlRGpnWFVTRmlGK3owWGJYQ2E0aDBWZEdUNDBwYUthWWlvZFI1Mk9IN2dMcjl1L2k2NGlKZHc2VDkwSUhiOQpmNHpNTWRRdmtO [...]
      service:
        name: kuma-control-plane
        namespace: kuma-system
        path: /validate-v1-secret
    failurePolicy: Ignore
    name: secret.validator.kuma-admission.kuma.io
    namespaceSelector:
      matchLabels:
        kuma.io/system-namespace: "true"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - secrets
    sideEffects: None
